# pyinit

./: .gitignore  README.md  flake.nix  pyproject.toml
pyinit/: __main__.py
