[tool.poetry]
name = "pyinit"
version = "0.1.0"
description = ""
authors = ["Author Name <author@example.com>"]
readme = "README.md"
packages = [
  { include = "pyinit" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.11.0"

[tool.poetry.scripts]
pyinit = "pyinit.__main__:main"

[tool.black]

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
